--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -385,14 +385,9 @@
         <version>${commons-beanutils.version}</version>
       </dependency>
       <dependency>
-        <groupId>commons-collections</groupId>
-        <artifactId>commons-collections</artifactId>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
         <version>${commons-collections.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-fileupload</groupId>
-        <artifactId>commons-fileupload</artifactId>
-        <version>${commons-fileupload.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
@@ -438,7 +433,7 @@
       <!-- == Begin Bouncy Castle == -->
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15on</artifactId>
+        <artifactId>bcprov-jdk18on</artifactId>
         <version>${bouncycastle.version}</version>
       </dependency>
       <!-- == Begin Bouncy Castle == -->
@@ -460,19 +455,9 @@
         <version>${jakarta-jsp.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.taglibs</groupId>
-        <artifactId>taglibs-standard-impl</artifactId>
-        <version>${taglibs-standard.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.taglibs</groupId>
-        <artifactId>taglibs-standard-jstlel</artifactId>
-        <version>${taglibs-standard.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.taglibs</groupId>
-        <artifactId>taglibs-standard-spec</artifactId>
-        <version>${taglibs-standard.version}</version>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+        <version>${jakarta.servlet.jsp.jstl.version}</version>
       </dependency>
       <!-- == End Other == -->
 
@@ -502,9 +487,9 @@
     <org.springframework.boot.version>3.0.0</org.springframework.boot.version>
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.5.11</org.mybatis.version>
-    <org.mybatis.spring.version>3.0.0</org.mybatis.spring.version>
+    <org.mybatis.spring.version>3.0.1</org.mybatis.spring.version>
     <!-- == MapStrcut== -->
-    <mapstruct.version>1.5.2.Final</mapstruct.version>
+    <mapstruct.version>1.5.3.Final</mapstruct.version>
     <!-- == Lombok == -->
     <!-- lombok.version is the same as the version managed by Spring Boot. -->
     <lombok.version>1.18.24</lombok.version>
@@ -517,22 +502,21 @@
     <guava.version>31.1-jre</guava.version>
     <!-- == Apache Commons == -->
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
-    <commons-collections.version>3.2.2</commons-collections.version>
-    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-collections.version>4.4</commons-collections.version>
     <commons-io.version>2.11.0</commons-io.version>
     <!-- == OpenPDF == -->
-    <openpdf.version>1.0.5</openpdf.version>
+    <openpdf.version>1.3.30</openpdf.version>
     <!-- == Apache POI == -->
-    <poi.version>4.1.2</poi.version>
+    <poi.version>5.2.3</poi.version>
     <!-- == Apache Commons Compress == -->
-    <commons.compress.version>1.21</commons.compress.version>
+    <commons.compress.version>1.22</commons.compress.version>
     <!-- == Bouncy Castle == -->
-    <bouncycastle.version>1.69</bouncycastle.version>
+    <bouncycastle.version>1.72</bouncycastle.version>
     <!-- == Other == -->
-    <jakarta-el.version>4.0.0</jakarta-el.version>
+    <jakarta-el.version>5.0.1</jakarta-el.version>
     <jakarta-inject.version>2.0.1</jakarta-inject.version>
-    <jakarta-jsp.version>3.0.0</jakarta-jsp.version>
-    <taglibs-standard.version>1.2.5</taglibs-standard.version>
+    <jakarta-jsp.version>3.1.0</jakarta-jsp.version>
+    <jakarta.servlet.jsp.jstl.version>3.0.1</jakarta.servlet.jsp.jstl.version>
     <!-- == Project Properties == -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <archetype.test.skip>true</archetype.test.skip>
