--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -392,8 +392,8 @@
         <version>${commons-beanutils.version}</version>
       </dependency>
       <dependency>
-        <groupId>commons-collections</groupId>
-        <artifactId>commons-collections</artifactId>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
         <version>${commons-collections.version}</version>
       </dependency>
       <dependency>
@@ -478,7 +478,7 @@
       <!-- == Begin Bouncy Castle == -->
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15on</artifactId>
+        <artifactId>bcprov-jdk18on</artifactId>
         <version>${bouncycastle.version}</version>
       </dependency>
       <!-- == Begin Bouncy Castle == -->
@@ -539,33 +539,33 @@
     <!-- == TERASOLUNA == -->
     <terasoluna.gfw.version>5.7.2-SNAPSHOT</terasoluna.gfw.version>
     <!-- == Spring Boot == -->
-    <org.springframework.boot.version>2.7.6</org.springframework.boot.version>
+    <org.springframework.boot.version>2.7.7</org.springframework.boot.version>
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.5.11</org.mybatis.version>
     <org.mybatis.spring.version>2.1.0</org.mybatis.spring.version>
     <!-- == Dozer== -->
     <dozer.version>6.5.2</dozer.version>
     <!-- == Joda-Time == -->
-    <joda-time.joda-time.version>2.10.9</joda-time.joda-time.version>
+    <joda-time.joda-time.version>2.12.2</joda-time.joda-time.version>
     <joda-time.joda-time-jsptags.version>1.1.1</joda-time.joda-time-jsptags.version>
     <jadira-usertype-core.version>6.0.1.GA</jadira-usertype-core.version>
     <!-- == Google == -->
     <guava.version>31.1-jre</guava.version>
     <!-- == Apache Commons == -->
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
-    <commons-collections.version>3.2.2</commons-collections.version>
-    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-collections.version>4.4</commons-collections.version>
+    <commons-fileupload.version>1.4</commons-fileupload.version>
     <commons-io.version>2.11.0</commons-io.version>
     <!-- == OpenPDF == -->
-    <openpdf.version>1.0.5</openpdf.version>
+    <openpdf.version>1.3.20</openpdf.version>
     <!-- == Apache POI == -->
-    <poi.version>4.1.2</poi.version>
+    <poi.version>5.2.3</poi.version>
     <!-- == Apache Commons Compress == -->
-    <commons.compress.version>1.21</commons.compress.version>
+    <commons.compress.version>1.22</commons.compress.version>
     <!-- == Apache Tiles == -->
     <tiles.version>3.0.8</tiles.version>
     <!-- == Bouncy Castle == -->
-    <bouncycastle.version>1.69</bouncycastle.version>
+    <bouncycastle.version>1.72</bouncycastle.version>
     <!-- == Other == -->
     <jakarta-el.version>3.0.3</jakarta-el.version>
     <jakarta-inject.version>1.0.5</jakarta-inject.version>
