--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -422,14 +422,6 @@
       </dependency>
       <!-- == End Apache POI == -->
 
-      <!-- == Begin Apache Commons Compress == -->
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-compress</artifactId>
-        <version>${commons.compress.version}</version>
-      </dependency>
-      <!-- == End Apache Commons Compress == -->
-
       <!-- == Begin Bouncy Castle == -->
       <dependency>
         <groupId>org.bouncycastle</groupId>
@@ -437,6 +429,27 @@
         <version>${bouncycastle.version}</version>
       </dependency>
       <!-- == Begin Bouncy Castle == -->
+
+      <!-- == Begin Logback == -->
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+      <!-- == End Logback == -->
+
+      <!-- == Begin SLF4J == -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <!-- == End SLF4J == -->
 
       <!-- == Begin Other == -->
       <dependency>
@@ -486,32 +499,34 @@
     <!-- == Spring Boot == -->
     <org.springframework.boot.version>3.2.0</org.springframework.boot.version>
     <!-- == MyBatis3 == -->
-    <org.mybatis.version>3.5.11</org.mybatis.version>
+    <org.mybatis.version>3.5.15</org.mybatis.version>
     <org.mybatis.spring.version>3.0.3</org.mybatis.spring.version>
     <!-- == MapStrcut== -->
-    <mapstruct.version>1.5.3.Final</mapstruct.version>
+    <mapstruct.version>1.5.5.Final</mapstruct.version>
     <!-- == Lombok == -->
     <!-- lombok.version is the same as the version managed by Spring Boot. -->
-    <lombok.version>1.18.24</lombok.version>
+    <lombok.version>1.18.30</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     <!-- == Date and Time API == -->
     <net.sargue.java-time-jsptags.version>2.0.0</net.sargue.java-time-jsptags.version>
     <!-- == Joda-Time == -->
-    <joda-time.joda-time.version>2.12.2</joda-time.joda-time.version>
+    <joda-time.joda-time.version>2.12.5</joda-time.joda-time.version>
     <!-- == Google == -->
-    <guava.version>31.1-jre</guava.version>
+    <guava.version>33.0.0-jre</guava.version>
     <!-- == Apache Commons == -->
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
     <commons-collections.version>4.4</commons-collections.version>
-    <commons-io.version>2.11.0</commons-io.version>
+    <commons-io.version>2.15.1</commons-io.version>
     <!-- == OpenPDF == -->
-    <openpdf.version>1.3.30</openpdf.version>
+    <openpdf.version>1.3.35</openpdf.version>
     <!-- == Apache POI == -->
-    <poi.version>5.2.3</poi.version>
-    <!-- == Apache Commons Compress == -->
-    <commons.compress.version>1.22</commons.compress.version>
+    <poi.version>5.2.5</poi.version>
     <!-- == Bouncy Castle == -->
-    <bouncycastle.version>1.72</bouncycastle.version>
+    <bouncycastle.version>1.77</bouncycastle.version>
+    <!-- == Logback == -->
+    <logback.version>1.4.14</logback.version>
+    <!-- == SLF4J == -->
+    <slf4j.version>2.0.9</slf4j.version>
     <!-- == Other == -->
     <jakarta-el.version>5.0.1</jakarta-el.version>
     <jakarta-inject.version>2.0.1</jakarta-inject.version>
