--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -434,14 +434,6 @@
       </dependency>
       <!-- == End Apache POI == -->
 
-      <!-- == Begin Apache Commons Compress == -->
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-compress</artifactId>
-        <version>${commons.compress.version}</version>
-      </dependency>
-      <!-- == End Apache Commons Compress == -->
-
       <!-- == Begin Apache Tiles == -->
       <dependency>
         <groupId>org.apache.tiles</groupId>
@@ -482,6 +474,27 @@
         <version>${bouncycastle.version}</version>
       </dependency>
       <!-- == Begin Bouncy Castle == -->
+
+      <!-- == Begin Logback == -->
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
+      <!-- == End Logback == -->
+
+      <!-- == Begin SLF4J == -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <!-- == End SLF4J == -->
 
       <!-- == Begin Other == -->
       <dependency>
@@ -541,31 +554,33 @@
     <!-- == Spring Boot == -->
     <org.springframework.boot.version>2.7.18</org.springframework.boot.version>
     <!-- == MyBatis3 == -->
-    <org.mybatis.version>3.5.11</org.mybatis.version>
-    <org.mybatis.spring.version>2.1.0</org.mybatis.spring.version>
+    <org.mybatis.version>3.5.15</org.mybatis.version>
+    <org.mybatis.spring.version>2.1.2</org.mybatis.spring.version>
     <!-- == Dozer== -->
     <dozer.version>6.5.2</dozer.version>
     <!-- == Joda-Time == -->
-    <joda-time.joda-time.version>2.12.2</joda-time.joda-time.version>
+    <joda-time.joda-time.version>2.12.5</joda-time.joda-time.version>
     <joda-time.joda-time-jsptags.version>1.1.1</joda-time.joda-time-jsptags.version>
     <jadira-usertype-core.version>6.0.1.GA</jadira-usertype-core.version>
     <!-- == Google == -->
-    <guava.version>31.1-jre</guava.version>
+    <guava.version>33.0.0-jre</guava.version>
     <!-- == Apache Commons == -->
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
     <commons-collections.version>4.4</commons-collections.version>
     <commons-fileupload.version>1.4</commons-fileupload.version>
-    <commons-io.version>2.11.0</commons-io.version>
+    <commons-io.version>2.15.1</commons-io.version>
     <!-- == OpenPDF == -->
-    <openpdf.version>1.3.20</openpdf.version>
+    <openpdf.version>1.3.35</openpdf.version>
     <!-- == Apache POI == -->
-    <poi.version>5.2.3</poi.version>
-    <!-- == Apache Commons Compress == -->
-    <commons.compress.version>1.22</commons.compress.version>
+    <poi.version>5.2.5</poi.version>
     <!-- == Apache Tiles == -->
     <tiles.version>3.0.8</tiles.version>
     <!-- == Bouncy Castle == -->
-    <bouncycastle.version>1.72</bouncycastle.version>
+    <bouncycastle.version>1.77</bouncycastle.version>
+    <!-- == Logback == -->
+    <logback.version>1.3.14</logback.version>
+    <!-- == SLF4J == -->
+    <slf4j.version>2.0.9</slf4j.version>
     <!-- == Other == -->
     <jakarta-el.version>3.0.3</jakarta-el.version>
     <jakarta-inject.version>1.0.5</jakarta-inject.version>
