slf4j-api version up #1272

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -430,6 +430,14 @@
       </dependency>
       <!-- == Begin Bouncy Castle == -->
 
+      <!-- == Begin SLF4J == -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <!-- == End SLF4J == -->
+
       <!-- == Begin Other == -->
       <dependency>
         <groupId>jakarta.el</groupId>
@@ -502,6 +510,8 @@
     <poi.version>5.2.5</poi.version>
     <!-- == Bouncy Castle == -->
     <bouncycastle.version>1.77</bouncycastle.version>
+    <!-- == SLF4J == -->
+    <slf4j.version>2.0.12</slf4j.version>
     <!-- == Other == -->
     <jakarta-el.version>5.0.1</jakarta-el.version>
     <jakarta-inject.version>2.0.1</jakarta-inject.version>
