--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-web-jsp/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-web-jsp/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>terasoluna-gfw-common-libraries</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.7.3-SNAPSHOT</version>
+    <version>5.7.3.RELEASE</version>
     <relativePath>../../terasoluna-gfw-common-libraries/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-web-jsp</artifactId>
