--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -202,6 +202,13 @@
 
       <!-- == Begin TERASOLUNA == -->
       <dependency>
+        <groupId>org.terasoluna.bom</groupId>
+        <artifactId>terasoluna-dependencies</artifactId>
+        <version>${terasoluna.gfw.bom.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-common</artifactId>
         <version>${terasoluna.gfw.version}</version>
@@ -322,145 +329,6 @@
         <type>pom</type>
       </dependency>
       <!-- == End TERASOLUNA == -->
-
-      <!-- == Begin Spring Boot == -->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${org.springframework.boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <!-- == End Spring Boot == -->
-
-      <!-- == Begin MyBatis == -->
-      <dependency>
-        <groupId>org.mybatis</groupId>
-        <artifactId>mybatis</artifactId>
-        <version>${org.mybatis.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mybatis</groupId>
-        <artifactId>mybatis-spring</artifactId>
-        <version>${org.mybatis.spring.version}</version>
-      </dependency>
-      <!-- == End MyBatis == -->
-
-      <!-- == Begin MapStruct== -->
-      <dependency>
-        <groupId>org.mapstruct</groupId>
-        <artifactId>mapstruct</artifactId>
-        <version>${mapstruct.version}</version>
-      </dependency>
-      <!-- == End MapStruct== -->
-
-      <!-- == Begin Date and Time API == -->
-      <dependency>
-        <groupId>net.sargue</groupId>
-        <artifactId>java-time-jsptags</artifactId>
-        <version>${net.sargue.java-time-jsptags.version}</version>
-      </dependency>
-      <!-- == End Date and Time API == -->
-
-      <!-- == Begin Joda-Time == -->
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>${joda-time.joda-time.version}</version>
-      </dependency>
-      <!-- == End Joda-Time == -->
-
-      <!-- == Begin Google == -->
-      <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>${guava.version}</version>
-      </dependency>
-      <!-- == End Google == -->
-
-      <!-- == Begin Apache Commons == -->
-      <dependency>
-        <groupId>commons-beanutils</groupId>
-        <artifactId>commons-beanutils</artifactId>
-        <version>${commons-beanutils.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-collections4</artifactId>
-        <version>${commons-collections.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>${commons-io.version}</version>
-      </dependency>
-      <!-- == Begin Apache Commons == -->
-
-      <!-- == Begin OpenPDF == -->
-      <dependency>
-        <groupId>com.github.librepdf</groupId>
-        <artifactId>openpdf</artifactId>
-        <version>${openpdf.version}</version>
-      </dependency>
-      <!-- == End OpenPDF == -->
-
-      <!-- == Begin Apache POI == -->
-      <dependency>
-        <groupId>org.apache.poi</groupId>
-        <artifactId>poi</artifactId>
-        <version>${poi.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.poi</groupId>
-        <artifactId>poi-ooxml</artifactId>
-        <version>${poi.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.poi</groupId>
-        <artifactId>poi-scratchpad</artifactId>
-        <version>${poi.version}</version>
-      </dependency>
-      <!-- == End Apache POI == -->
-
-      <!-- == Begin Bouncy Castle == -->
-      <dependency>
-        <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk18on</artifactId>
-        <version>${bouncycastle.version}</version>
-      </dependency>
-      <!-- == Begin Bouncy Castle == -->
-
-      <!-- == Begin SLF4J == -->
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-      <!-- == End SLF4J == -->
-
-      <!-- == Begin Other == -->
-      <dependency>
-        <groupId>jakarta.el</groupId>
-        <artifactId>jakarta.el-api</artifactId>
-        <version>${jakarta-el.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>jakarta.inject</groupId>
-        <artifactId>jakarta.inject-api</artifactId>
-        <version>${jakarta-inject.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>jakarta.servlet.jsp</groupId>
-        <artifactId>jakarta.servlet.jsp-api</artifactId>
-        <version>${jakarta-jsp.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish.web</groupId>
-        <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-        <version>${jakarta.servlet.jsp.jstl.version}</version>
-      </dependency>
-      <!-- == End Other == -->
-
     </dependencies>
   </dependencyManagement>
   <properties>
@@ -483,40 +351,7 @@
     <!-- == Dependency Versions == -->
     <!-- == TERASOLUNA == -->
     <terasoluna.gfw.version>5.10.0-SNAPSHOT</terasoluna.gfw.version>
-    <!-- == Spring Boot == -->
-    <org.springframework.boot.version>3.3.0</org.springframework.boot.version>
-    <!-- == MyBatis3 == -->
-    <org.mybatis.version>3.5.15</org.mybatis.version>
-    <org.mybatis.spring.version>3.0.3</org.mybatis.spring.version>
-    <!-- == MapStrcut== -->
-    <mapstruct.version>1.5.5.Final</mapstruct.version>
-    <!-- == Lombok == -->
-    <!-- lombok.version is the same as the version managed by Spring Boot. -->
-    <lombok.version>1.18.30</lombok.version>
-    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-    <!-- == Date and Time API == -->
-    <net.sargue.java-time-jsptags.version>2.0.0</net.sargue.java-time-jsptags.version>
-    <!-- == Joda-Time == -->
-    <joda-time.joda-time.version>2.12.5</joda-time.joda-time.version>
-    <!-- == Google == -->
-    <guava.version>33.0.0-jre</guava.version>
-    <!-- == Apache Commons == -->
-    <commons-beanutils.version>1.9.4</commons-beanutils.version>
-    <commons-collections.version>4.4</commons-collections.version>
-    <commons-io.version>2.15.1</commons-io.version>
-    <!-- == OpenPDF == -->
-    <openpdf.version>1.3.35</openpdf.version>
-    <!-- == Apache POI == -->
-    <poi.version>5.2.5</poi.version>
-    <!-- == Bouncy Castle == -->
-    <bouncycastle.version>1.77</bouncycastle.version>
-    <!-- == SLF4J == -->
-    <slf4j.version>2.0.12</slf4j.version>
-    <!-- == Other == -->
-    <jakarta-el.version>5.0.1</jakarta-el.version>
-    <jakarta-inject.version>2.0.1</jakarta-inject.version>
-    <jakarta-jsp.version>3.1.0</jakarta-jsp.version>
-    <jakarta.servlet.jsp.jstl.version>3.0.1</jakarta.servlet.jsp.jstl.version>
+    <terasoluna.gfw.bom.version>1.0.0-SNAPSHOT</terasoluna.gfw.bom.version>
     <!-- == Project Properties == -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <archetype.test.skip>true</archetype.test.skip>
