add developers tag and scm tag in pom.xml #1352

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
     </organization>
     <developers>
         <developer>
-            <name>NTT DATA</name>
-            <organization>NTT DATA Corporation</organization>
+            <name>NTT DATA Group Corporation</name>
+            <organization>NTT DATA Group Corporation</organization>
             <organizationUrl>http://terasolunaorg.github.io/</organizationUrl>
         </developer>
     </developers>
