--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-web-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-web-dependencies/pom.xml
@@ -12,5 +12,10 @@
     <name>TERASOLUNA Server Framework for Java (5.x) recommended dependencies for web</name>
     <description>Useful libraries for web recommended by TERASOLUNA Server Framework for Java (5.x)</description>
     <url>http://terasoluna.org</url>
+    <scm>
+        <connection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>git@github.com:terasolunaorg/terasoluna-gfw.git</url>
+    </scm>
 
 </project>
