--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
@@ -20,6 +20,11 @@
             <distribution>manual</distribution>
         </license>
     </licenses>
+    <scm>
+        <connection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>git@github.com:terasolunaorg/terasoluna-gfw.git</url>
+    </scm>
     <build>
         <plugins>
             <plugin>
