--- a/terasoluna-gfw-dependencies/terasoluna-gfw-web-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-web-dependencies/pom.xml
@@ -11,6 +11,11 @@
     <packaging>pom</packaging>
     <name>TERASOLUNA Server Framework for Java (5.x) for web library</name>
     <url>http://terasoluna.org</url>
+    <scm>
+        <connection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>git@github.com:terasolunaorg/terasoluna-gfw.git</url>
+    </scm>
 
     <dependencies>
         <!-- == Begin TERASOLUNA == -->
