--- a/terasoluna-gfw-dependencies/terasoluna-gfw-web-jsp-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-web-jsp-dependencies/pom.xml
@@ -13,6 +13,12 @@
     <name>TERASOLUNA Server Framework for Java (5.x) for web-jsp library</name>
     <url>http://terasoluna.org</url>
 
+    <scm>
+        <connection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:git@github.com:terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>git@github.com:terasolunaorg/terasoluna-gfw.git</url>
+    </scm>
+
     <dependencies>
         <!-- == Begin TERASOLUNA == -->
         <dependency>
