--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -30,8 +30,8 @@
     </repositories>
     <developers>
         <developer>
-            <name>NTT DATA</name>
-            <organization>NTT DATA Corporation</organization>
+            <name>NTT DATA Group Corporation</name>
+            <organization>NTT DATA Group Corporation</organization>
             <organizationUrl>http://terasolunaorg.github.io/</organizationUrl>
         </developer>
     </developers>
