add developers tag and scm tag in pom.xml #1352

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <scm>
         <connection>scm:git:git://github.com/terasolunaorg/terasoluna-gfw.git</connection>
         <developerConnection>scm:git:ssh://github.com/terasolunaorg/terasoluna-gfw.git</developerConnection>
-        <url>https://github.com/terasolunaorg/terasoluna-gfw.git</url>
+        <url>https://github.com/terasolunaorg/terasoluna-gfw</url>
     </scm>
     <properties>
         <!-- == Maven Plugin Versions == -->
