--- a/terasoluna-gfw-dependencies/terasoluna-gfw-jpa-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-jpa-dependencies/pom.xml
@@ -12,6 +12,11 @@
     <description>Maven dependency definition for using JPA</description>
     <url>http://terasoluna.org</url>
     <packaging>pom</packaging>
+    <scm>
+        <connection>scm:git:git://github.com/terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:ssh://github.com/terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>https://github.com/terasolunaorg/terasoluna-gfw</url>
+    </scm>
     <dependencies>
         <!-- == Begin JPA == -->
         <!-- == Begin Spring == -->
