--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -12,6 +12,11 @@
     <name>TERASOLUNA Server Framework for Java (5.x) recommended dependencies</name>
     <description>Useful libraries recommended by TERASOLUNA Server Framework for Java (5.x)</description>
     <url>http://terasoluna.org</url>
+    <scm>
+        <connection>scm:git:git://github.com/terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:ssh://github.com/terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>https://github.com/terasolunaorg/terasoluna-gfw</url>
+    </scm>
 
     <dependencies>
         <!-- == Begin Apache Commons == -->
