--- a/terasoluna-gfw-dependencies/terasoluna-gfw-security-core-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-security-core-dependencies/pom.xml
@@ -19,6 +19,11 @@
             <distribution>manual</distribution>
         </license>
     </licenses>
+    <scm>
+        <connection>scm:git:git://github.com/terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:ssh://github.com/terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>https://github.com/terasolunaorg/terasoluna-gfw</url>
+    </scm>
 
     <dependencies>
         <!-- Spring Security -->
