--- a/terasoluna-gfw-dependencies/terasoluna-gfw-security-web-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-security-web-dependencies/pom.xml
@@ -11,6 +11,11 @@
     <name>TERASOLUNA Server Framework for Java (5.x) for security-web library</name>
     <url>http://terasoluna.org</url>
     <packaging>pom</packaging>
+    <scm>
+        <connection>scm:git:git://github.com/terasolunaorg/terasoluna-gfw.git</connection>
+        <developerConnection>scm:git:ssh://github.com/terasolunaorg/terasoluna-gfw.git</developerConnection>
+        <url>https://github.com/terasolunaorg/terasoluna-gfw</url>
+    </scm>
     <dependencies>
         <!-- == Begin TERASOLUNA == -->
         <dependency>
