--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-web/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-web/pom.xml
@@ -80,14 +80,13 @@
         </dependency>
         <!-- == End Spring == -->
 
-        <!-- == Begin Tomcat == -->
         <!-- Servlet API 4.0 -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        <!-- == End Tomcat == -->
+        <!-- == End Servlet == -->
 
         <!-- == Begin Database == -->
         <!-- H2 (for test) -->
